...
    var loadingText: some View {
        Text("loading...")
    }
    var bookContent: some View {
        Text("contents")
    }
    var pageNumber: some View {
        Text("\(curPage+1) / \(pages.count)")
    }
    var body: some View {
        NavigationView {
            ZStack {
                ZStack {
...
                                HStack {
                                    Spacer()
                                    MyTextView(text: pages[curPage],
                                       width: screenSize.width * 0.75)
                                        .frame(width: screenSize.width * 0.75,
                                               height: screenSize.height * 0.75)
                                        .accessibilityIdentifier("BookContent")
                                    Spacer()
                                }
                                    pageNumber.accessibilityIdentifier("pageNumber")
                                    Spacer()
                                }
                                .onTouch(type: .started, perform: getLocation)
...
                                                   }
                               })
                                .simultaneousGesture(TapGesture().onEnded(tapToChangePage))
                                .alert(isPresented: $showAlert) {
                                    switch activeAlert {
                                    case .first:
                                        return Alert(title: Text("This is the first page"),
                                                     dismissButton: .default(Text("OK")))
                                    case .second:
                                        return Alert(title: Text("This is the last page"),
                                                     dismissButton: .default(Text("OK")))
                                    case .third:
                                        return Alert(title: Text("Want to exist?"),
                                                     primaryButton: .destructive(Text("Exist"),
                                                                                 action: {
                                            self.presentationMode.wrappedValue.dismiss()}),
                                                     secondaryButton: .default(Text("Cancel"), action: {}))
                                    }
                                }}
                        }
...
