...
            TabView(selection: $selection) {
                MainView().navigationBarTitle("")
                    .navigationBarHidden(true).tabItem {
                    if selection == Tabs.home {
                        Image("icon_home_20210913_sel@25")
                    } else {
                        Image("icon_home_20210913_nor@25")
                    }
                }.tag(Tabs.home)
                BookShelf().navigationBarTitle("")
                    .navigationBarHidden(true).tabItem {
                    if selection == Tabs.library {
                        Image("icon_home_sel_iOS_25@1")
                    } else {
                        Image("icon_home_nor_iOS_25@1")
                    }
                }.tag(Tabs.library)
                ConfigPage().navigationBarTitle("")
                    .navigationBarHidden(true).tabItem {
                    if selection == Tabs.setting {
                        Image("icon_settings_sel_iOS_25@1")
...
